# service-account

./: .gitattributes  .gitignore  Cargo.toml  package-lock.json  readme.md  rustfmt.toml  technical.md  tsconfig.lib.json
app-destiny/: .gitignore  .prettierignore  index.html  next.config.js  (+5 more)
lib-destiny-rs/: Cargo.toml
lib-destiny-rs/queries/: activity_network_breakdown.sql  activity_stats_from_instances.sql  clan_info_from_membership.sql  clan_insert.sql  clan_member_by_membership.sql  clan_roster_get.sql  clan_update.sql  instance_members_missing_profile.sql  instance_multi_get_members.sql  member_activity_similiar.sql  member_record_get.sql  member_record_insert.sql  member_triumphs_read.sql  member_triumphs_write.sql  network_get_clans.sql  season_get_all_active.sql
lib-destiny-rs/schema/: truncate.sql
lib-destiny-rs/src/: aliases.rs  api.rs  bungie.rs  lib.rs
lib-destiny-rs/src/api/: activity.rs  clan.rs  instance.rs  manifest.rs  member.rs
lib-destiny-rs/src/app/: clan.rs  instance.rs  member.rs  responses.rs
lib-destiny-rs/src/app/report/: member.rs
lib-destiny-rs/src/bungie/: definitions.rs  enums.rs  schemas.rs
lib-destiny-rs/src/database/: activity_types.rs  character.rs  instance.rs  seasons.rs
lib-destiny-rs/src/jobs/: activity.rs  manifest.rs  member.rs  task.rs
lib-destiny-rs/src/sync/: member.rs
lib-levelcrush/: Cargo.toml
lib-levelcrush-macros-rs/: Cargo.toml
lib-levelcrush-macros-rs/src/: lib.rs
lib-levelcrush-rs/: Cargo.toml
lib-levelcrush-rs/src/: cache.rs  database.rs  lib.rs  macros.rs  mysql_session.rs  retry_lock.rs  server.rs  task_manager.rs  task_pool.rs  types.rs  util.rs
lib-levelcrush-rs/src/types/: destiny.rs
lib-levelcrush/src/: cache.rs  database.rs  lib.rs  retry_lock.rs  server.rs
service-accounts/: .env.sample  Cargo.toml  readme.md
service-accounts/queries/: account_get_by_id.sql  account_get_by_token.sql  account_insert.sql  account_platform_all_data.sql  account_platform_data_insert.sql  account_platform_data_read.sql  account_platform_data_unlink.sql  account_platform_get_by_id.sql  account_platform_insert.sql  account_platform_match_account.sql  account_platform_need_update.sql  account_platform_read.sql  account_platform_unlink.sql  account_search.with.bungie.sql  account_search.with.discord.sql  account_search.with.twitch.sql  account_search_by_bungie.sql  account_search_by_bungie_bulk.sql  account_search_by_discord.sql
service-accounts/src/: app.rs  database.rs  env.rs  jobs.rs  main.rs  routes.rs  sync.rs
service-accounts/src/app/: accounts.rs  discord.rs  session.rs  state.rs
service-accounts/src/database/: account.rs  platform.rs  platform_data.rs
service-accounts/src/jobs/: purge.rs  reset.rs  server.rs
service-accounts/src/routes/: guards.rs  link.rs  platform.rs  profile.rs  responses.rs  search.rs
service-accounts/src/routes/platform/: bungie.rs  discord.rs  twitch.rs
service-accounts/src/sync/: discord.rs
service-destiny/: .env.sample  .gitignore  Cargo.toml  destiny.sqlite-journal  readme.md
service-destiny/queries/: activity_exist_multi.sql  activity_from_instances.sql  activity_history_existing.sql  activity_history_missing_instance_data.sql  activity_history_write.sql  activity_network_breakdown.sql  activity_stats_existing.sql  activity_stats_insert.sql  activity_types_write.sql  activity_write.sql  character_activity_last_timestamp.sql  character_insert.sql  character_update.sql  clan_add_member.sql  clan_info_by_slug.sql  clan_insert.sql  class_exist_multi.sql  class_write.sql  instance_get_members.sql  instance_members_write.sql  instance_multi_get.sql  instance_write.sql  leaderboard_activities.sql  leaderboard_pvp.sql  leaderboard_pvp_rank.sql  leaderboard_raids.sql  leaderboard_raids_rank.sql  leaderboard_seals.sql  leaderboard_titles.sql  leaderboard_titles_rank.sql  member_get.sql  member_get_by_bungie.sql  member_multi_get.sql  member_record_insert.sql  member_record_update.sql  member_search.sql  member_search_count.sql  member_snapshot_get.sql  member_snapshot_write.sql  member_titles_get.sql  (+8 more)
service-destiny/schema/: purge.sql  schema.sql  truncate.sql
service-destiny/src/: app.rs  bungie.rs  database.rs  discord.rs  drive.rs  env.rs  jobs.rs  main.rs  routes.rs  sheets.rs
service-destiny/src/app/: activity.rs  clan.rs  instance.rs  member.rs  modes.rs  state.rs
service-destiny/src/app/report/: member.rs
service-destiny/src/bungie/: definitions.rs  enums.rs  manifest.rs  schemas.rs
service-destiny/src/database/: activity.rs  activity_history.rs  activity_stats.rs  activity_types.rs  character.rs  clan.rs  class.rs  instance.rs  leaderboard.rs  member.rs  rank.rs  seasons.rs  setting.rs  triumph.rs
service-destiny/src/jobs/: activity.rs  clan.rs  manifest.rs  member.rs  reports.rs  reset.rs  server.rs  setup.rs  sheets.rs  task.rs
service-destiny/src/jobs/database/: activity.rs  activity_history.rs  activity_stats.rs  member.rs  rank.rs
service-destiny/src/jobs/sync/: character.rs  definition.rs  member.rs
service-destiny/src/routes/: clan.rs  control.rs  leaderboard.rs  member.rs  network.rs  queries.rs  rank.rs  responses.rs  search.rs  setting.rs  settings.rs
service-destiny/src/sheets/: master_workbook.rs  player_workbook.rs
service-destiny/src/sync/: activity.rs  character.rs  clan.rs  definition.rs  member.rs
service-discord/: Cargo.toml
service-discord/queries/: category_active_users.sql  channel_active_users.sql  channel_log_insert.sql  role_allow.sql  role_denies.sql  role_denies_get.sql
service-discord/src/: app.rs  database.rs  env.rs  main.rs  routes.rs
service-discord/src/app/: discord.rs  state.rs
service-discord/src/database/: category.rs  channel.rs  channel_log.rs  member.rs  role.rs
service-discord/src/routes/: channel.rs  query.rs  responses.rs  settings.rs
service-discord/src/sync/: member.rs
service-feed/: .env.sample  Cargo.toml  readme.md
service-feed/queries/: access_key_get.sql  feed_data_get.sql  feed_get.sql  feed_insert.sql  feed_update.sql
service-feed/src/: env.rs  main.rs  routes.rs
(+325 files in other folders)
