[package]
name = "service-account"
version = "1.0.0"
edition = "2021"


[dependencies]
lib-account = { git = "https://code.levelcrush.com/LevelCrush/lib-account.git", rev="e438c2375e" }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.103" }
serde_urlencoded = { version = "0.7.1" }
serde_repr = { version = "0.1.14" }
serde_yaml = { version = "0.9.25" }
