[package]
name = "lib_destiny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levelcrush = { path = "../lib-levelcrush-rs", default_features = false }

serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_repr = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
ts-rs = { workspace = true }
clap = { workspace = true }

# other
md5 = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }