[package]
name = "levelcrush-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro2 = { version = "1.0.56" }
quote = { version = "1.0.26" }
syn = { version = "2.0.15", features=["full", "extra-traits"] }