[package]
name = "levelcrush"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Defines a feature named `webp` that does not enable any other features.
[features]
server = ["dep:axum", "dep:tower", "dep:tower-http"]
database = ["dep:sqlx", "dep:bigdecimal"]
session = ["server", "database", "dep:axum-sessions"]
cors = ["server"]
default = ["server", "database", "session", "cors"]

[dependencies]
#async runtime
tokio = { version = "1.25.0", features = ["full", "tracing"] }

# database
sqlx = { version = "0.6.2", features = ["mysql", "bigdecimal", "runtime-tokio-rustls", "macros","chrono"], default_features = false, optional = true }
bigdecimal = { version = "0.3.1", features = ["serde"], optional = true }

# serde 
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.93" }

# webserver 
axum = { version = "0.6.7", optional = true }
axum-sessions = { version = "0.5.0", optional = true }
tower-http = { version = "0.4.0", features = ["full"], default_features=false, optional = true}
tower = { version = "0.4.13", features = ["full"], default_features=false, optional = true }
# required 
chrono = { version ="0.4.24", features=["serde","default"]}
futures = { version = "0.3.28" }
tracing = { version = "0.1.37", features = ["log"]}
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
anyhow = "1.0.71"
uuid = { version = "1.3.3", features=["v4","fast-rng"] }
tracing-test = "0.2.4"
rand = "0.8.5"
# definition export
ts-rs = { version = "6.2.1", features = ["serde-compat", "chrono-impl", "bigdecimal-impl"], default_features = false }
