[package]
name = "service-accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levelcrush = { path = "../lib-levelcrush", features = [
    "server",
    "cors",
    "session",
], default_features = false }

serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_repr = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }

# other
md5 = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
