[package]
name = "service-destiny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levelcrush = { path = "../lib-levelcrush", features = [
    "server",
    "cors",
], default_features = false }
lib-destiny = { path = "../lib-destiny" }

serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_repr = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }

# other
md5 = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }

google-sheets4 = "5.0.3+20230119"
google-drive3 = "5.0.3+20230115"
serenity = "0.11.6"
tracing-test = { workspace = true }